# chimpanse

./: .gitignore  CMakeLists.txt  OiCore.cpp  OiRandom.h  README  oichimp.cpp
src/: CMakeLists.txt  main.cpp
src/core/: core.cpp  core.h
src/gui/: magictable.cpp  magictable.h  magictable.ui  magicwindow.cpp  magicwindow.h  magicwindow.qrc  magicwindow.ui  popwindow.cpp  popwindow.h  popwindow.ui  preferences.cpp  preferences.h  preferences.ui  windows.rc
src/gui/images/: chimp.xpm
