PROJECT(CHIMP)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR} ${CHIMP_SOURCE_DIR} ${CHIMP_BINARY_DIR})
INCLUDE(${QT_USE_FILE})


SET(CMAKE_CXX_FLAGS "-g -Wall ")
#SET(CMAKE_CXX_FLAGS "-std=c++0x")

FILE(GLOB CHIMP_SOURCE_CXX main.cpp core/*.cpp gui/*.cpp)
#FILE(GLOB folder_header core/*.h)

SET(CHIMP_UI gui/magictable.ui)
SET(CHIMP_MOC gui/magictable.h)

QT4_WRAP_UI(CHIMP_SOURCE_CXX ${CHIMP_UI})
QT4_WRAP_CPP(CHIMP_SOURCE_CXX ${CHIMP_MOC})

ADD_EXECUTABLE(chimp ${CHIMP_SOURCE_CXX})

TARGET_LINK_LIBRARIES(chimp ${QT_LIBRARIES})
