PROJECT(CHIMP)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR} ${CHIMP_SOURCE_DIR} ${CHIMP_BINARY_DIR})
INCLUDE(${QT_USE_FILE})


SET(CMAKE_CXX_FLAGS "-Wall ")
#SET(CMAKE_CXX_FLAGS "-std=c++0x")

FILE(GLOB CHIMP_SOURCE_CXX main.cpp core/*.cpp gui/*.cpp)
FILE(GLOB CHIMP_UI gui/*.ui)
FILE(GLOB CHIMP_MOC gui/*.h)
SET(CHIMP_RCS gui/magicwindow.qrc )
        

QT4_WRAP_UI(CHIMP_SOURCE_CXX ${CHIMP_UI})
QT4_WRAP_CPP(CHIMP_SOURCE_CXX ${CHIMP_MOC})
QT4_ADD_RESOURCES(CHIMP_SOURCE_RCS ${CHIMP_RCS})

SET(CHIMP_SOURCE_RCS ${CHIMP_SOURCE_RCS} gui/windows.rc)

IF(WIN32)
    SET(GUI_TYPE WIN32)
ENDIF(WIN32)
# Set some Apple MacOS Specific settings
IF (APPLE)
    SET(GUI_TYPE MACOSX_BUNDLE)
ENDIF (APPLE)

ADD_EXECUTABLE(chimp ${GUI_TYPE} ${CHIMP_SOURCE_CXX} ${CHIMP_SOURCE_RCS})

TARGET_LINK_LIBRARIES(chimp ${QT_LIBRARIES})
